--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -217,7 +217,7 @@
                                        data-toggle="tooltip" data-placement="top" title="Modifier la sortie">
                                         <i class="far fa-edit"></i>
                                     </a>
-                                    <a href="#" class="btn-floating green darken-1 mr-2 btn-sm material-tooltip-main"
+                                    <a href="{{ path('sortie_publish', {id: sortie.id}) }}" class="btn-floating green darken-1 mr-2 btn-sm material-tooltip-main"
                                        data-toggle="tooltip" data-placement="top" title="Publier la sortie">
                                         <i class="fas fa-arrow-up"></i>
                                     </a>
