--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -135,9 +135,11 @@
             <!--Grid column-->
             <div class="col-md-4 col-lg-4">
                 <div class="form-row justify-content-center">
-                    <!-- List user -->
-                    <div class="md-form">
+                    <!-- List participants -->
+                    <div>
                         <h5>Liste des participants inscrits : </h5>
+
+                        {% if sortie.inscriptions is not empty %}
 
                         <table class="table" id="participantsTable">
                             <thead>
@@ -157,6 +159,13 @@
                             {% endfor %}
                             </tbody>
                         </table>
+
+                        {% else %}
+                            <div class="text-center dark-grey-text mt-3">
+                                <h5 class="font-weight-bold">Aucun participant pour le moment </h5>
+                            </div>
+
+                        {% endif %}
                     </div>
                 </div>
             </div>
