label select ville et lieu

--- a/public/bootstrap/css/style.css
+++ b/public/bootstrap/css/style.css
@@ -77,7 +77,9 @@ body {
 }
 
 #labelDateLimite,
-#labelDateHeureDebut {
+#labelDateHeureDebut,
+#labelVille,
+#labelLieu {
     font-size: 0.85rem;
     color: #757575;
 }
