--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,66 +3,81 @@
 {% block title %}Connexion!{% endblock %}
 
 {% block body %}
-    <h4>Bonjour ! Connectez-vous</h4>
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+    <div class="container-fluid col-md-4 col-lg-4 mx-auto">
+        <h4>Bonjour ! Connectez-vous</h4>
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-        <div class="md-form">
-            <label for="inputMail">Identifiant</label>
-            <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control"
-                   required
-                   autofocus>
-        </div>
+            <div class="md-form">
+                <label for="inputMail">Identifiant</label>
+                <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control"
+                       required
+                       autofocus>
+            </div>
 
-        <div class="md-form">
-            <label for="inputPassword">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control" required>
-        </div>
+            <div class="md-form">
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" required>
+            </div>
 
-        <div class="form-check">
-            <input type="checkbox" name="_remember_me" id="rememberMe" class="form-check-input">
-            <label class="form-check-label" for="rememberMe"> Se souvenir de moi</label>
-        </div>
-
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-        <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">
-            Connexion
-        </button>
-    </form>
-
-    <div class="mt-3">
-        <a data-toggle="modal" data-target="#resetPassWord" class="indigo-text">Mot de passe
-            oublié?</a>
-
-        <div class="modal fade" id="resetPassWord" tabindex="-1" role="dialog"
-             aria-labelledby="myModalLabel"
-             aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header light-blue darken-4 text-white">
-                        <h4 class="modal-title">Mot de passe oublié ?</h4>
-                        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+            <div class="form-row">
+                <div class="col text-left">
+                    <div class="form-check">
+                        <input type="checkbox" name="_remember_me" id="rememberMe" class="form-check-input">
+                        <label class="form-check-label" for="rememberMe"> Se souvenir de moi</label>
                     </div>
-                    <div class="modal-body mx-3">
-                        <form method="post" action="{{ path('app_password_send_mail') }}">
-                            <div class="md-form">
-                                <label for="email" class="form-check-label">Veuillez saisir votre mail, un
-                                    message vous sera
-                                    envoyé!</label>
-                                <input type="text" name="email" id="email"
-                                       class="form-control"
-                                       required
-                                       autofocus>
-                            </div>
-                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                            <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Envoyer
+                </div>
+                <div class="col text-right">
+                    <a data-toggle="modal" data-target="#resetPassWord" class="indigo-text">Mot de passe
+                        oublié?</a>
+                </div>
+            </div>
+
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            <br>
+
+            <div class="form-row mb-4 flex justify-content-center">
+                <div class="col-sm-2 mr-5">
+                    <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">
+                        Connexion
+                    </button>
+                </div>
+            </div>
+        </form>
+
+        <div class="mt-3">
+
+
+            <div class="modal fade" id="resetPassWord" tabindex="-1" role="dialog"
+                 aria-labelledby="myModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header light-blue darken-4 text-white">
+                            <h4 class="modal-title">Mot de passe oublié ?</h4>
+                            <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
                             </button>
-                        </form>
+                        </div>
+                        <div class="modal-body mx-3">
+                            <form method="post" action="{{ path('app_password_send_mail') }}">
+                                <div class="md-form">
+                                    <label for="email" class="form-check-label">Veuillez saisir votre mail, un
+                                        message vous sera
+                                        envoyé!</label>
+                                    <input type="text" name="email" id="email"
+                                           class="form-control"
+                                           required
+                                           autofocus>
+                                </div>
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Envoyer
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
