--- a/templates/admin/listUtilisateurs.html.twig
+++ b/templates/admin/listUtilisateurs.html.twig
@@ -25,7 +25,7 @@
                         <div class="input-file-container">
                             <input class="input-file" type="file" name="csvFile"
                                    id="csvFile" accept=".csv"/>
-                            <label for="my-file" class="input-file-trigger btn green darken-3 text-white btn-rounded"
+                            <label for="csvFile" class="input-file-trigger btn green darken-3 text-white btn-rounded"
                                    tabindex="0">
                                 Choisir une liste d'utilisateurs (.csv)
                             </label>
