visuel réinitialisation mdp

--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -2,32 +2,36 @@
 {% form_theme resetPwdForm 'bootstrap_4_layout.html.twig' %}
 
 {% block body %}
-    <h4>Réinitialisez votre mot de passe</h4>
-    {{ form_start(resetPwdForm) }}
-    <div class="md-form">
-        {{ form_widget(resetPwdForm.motpasse.first) }}
+    <div class="container-fluid col-md-4 col-lg-4 mx-auto">
+        <h4>Réinitialisez votre mot de passe</h4>
+        {{ form_start(resetPwdForm) }}
+        <div class="md-form">
+            {{ form_widget(resetPwdForm.motpasse.first) }}
 
-        {{ form_label(resetPwdForm.motpasse.first) }}
+            {{ form_label(resetPwdForm.motpasse.first) }}
 
-        <small>{{ form_help(resetPwdForm.motpasse.first) }}</small>
+            <small>{{ form_help(resetPwdForm.motpasse.first) }}</small>
 
-        <div class="form-error">
-            {{ form_errors(resetPwdForm.motpasse.first) }}
+            <div class="form-error">
+                {{ form_errors(resetPwdForm.motpasse.first) }}
+            </div>
         </div>
-    </div>
 
-    <div class="md-form">
-        {{ form_widget(resetPwdForm.motpasse.second) }}
+        <div class="md-form">
+            {{ form_widget(resetPwdForm.motpasse.second) }}
 
-        {{ form_label(resetPwdForm.motpasse.second) }}
+            {{ form_label(resetPwdForm.motpasse.second) }}
 
-        <small>{{ form_help(resetPwdForm.motpasse.second) }}</small>
+            <small>{{ form_help(resetPwdForm.motpasse.second) }}</small>
 
-        <div class="form-error">
-            {{ form_errors(resetPwdForm.motpasse.second) }}
+            <div class="form-error">
+                {{ form_errors(resetPwdForm.motpasse.second) }}
+            </div>
         </div>
+        {{ form_widget(resetPwdForm) }}
+        <div class="form-row flex justify-content-center">
+            <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Réinitialiser</button>
+        </div>
+        {{ form_end(resetPwdForm) }}
     </div>
-    {{ form_widget(resetPwdForm) }}
-    <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Réinitialiser</button>
-    {{ form_end(resetPwdForm) }}
 {% endblock %}
