--- a/templates/admin/listUtilisateurs.html.twig
+++ b/templates/admin/listUtilisateurs.html.twig
@@ -31,9 +31,11 @@
                             </label>
                         </div>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                        <button class="btn btn-rounded light-blue darken-3 text-white lighten-2 btn-md mt-4"
-                                type="submit">Importer
-                        </button>
+                        <div class="form-row flex justify-content-center">
+                            <button class="btn btn-rounded light-blue darken-3 text-white lighten-2 btn-md mt-4"
+                                    type="submit">Importer
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
