--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -74,8 +74,10 @@
                                            autofocus>
                                 </div>
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                                <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Envoyer
-                                </button>
+                                <div class="form-row flex justify-content-center">
+                                    <button class="btn light-blue darken-3 text-white btn-rounded" type="submit">Envoyer
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
